Version 2.02.187 - 
===================================
  Fix resize of thin-pool with data and metadata of different segtype.
  Fix splitting mirror leg in cluster.
  Fix activation order when removing merged snapshot.
  Add support for DM_DEVICE_GET_TARGET_VERSION into device_mapper.
  Add lvextend-raid.sh to check on RaidLV extensions synchronization.
  Fix lvmetad shutdown and avoid lenghty timeouts when rebooting system.
  Prevent creating VGs with PVs with different logical block sizes.
  Pvmove runs in exlusively activating mode for exclusively active LVs.
  Activate thin-pool layered volume as 'read-only' device.
  Ignore crypto devices with UUID signature CRYPT-SUBDEV.
  Enhance validation for thin and cache pool conversion and swapping.
  Fixed activation on boot - lvm2 no longer activates incomplete VGs.

Version 2.02.186 - 27th August 2019
===================================
  Improve internal removal of cached devices.
  Synchronize with udev when dropping snapshot.
  Add missing device synchronization point before removing pvmove node.
  Correctly set read_ahead for LVs when pvmove is finished.
  Fix metadata writes from corrupting with large physical block size.
  Report no_discard_passdown for cache LVs with lvs -o+kernel_discards.
  Prevent shared active mirror LVs with lvmlockd.

Version 2.02.185 - 13th May 2019
================================
  Fix change of monitoring in clustered volumes.
  Improve -lXXX%VG modifier which improves cache segment estimation.
  Add synchronization with udev before removing cached devices.
  Fix missing growth of _pmspare volume when extending _tmeta volume.
  Automatically grow thin metadata, when thin data gets too big.
  Add support for vgsplit with cached devices.
  Fix signal delivery checking race in libdaemon (lvmetad).
  Add missing Before=shutdown.target to LVM2 services to fix shutdown ordering.

Version 2.02.184 - 22nd March 2019
==================================